--- a/Notebook_.ipynb
+++ b/Notebook_.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "4cc7e627",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Import libraries"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": 93,
    "id": "8e336da9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -28,7 +36,11 @@
   {
    "cell_type": "markdown",
    "id": "283a1bec",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Import Dataset"
    ]
@@ -37,7 +49,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "d49a9b6b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -226,7 +242,11 @@
   {
    "cell_type": "markdown",
    "id": "009fe02b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Analysis on the dataframe"
    ]
@@ -235,7 +255,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "a4366a6a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "column_to_analyse = df.describe().columns"
@@ -273,7 +297,11 @@
    "cell_type": "code",
    "execution_count": 71,
    "id": "5c5b6222",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -307,14 +335,22 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "88e609bf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "c4a178b4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Linear regression using sklearn"
    ]
@@ -323,7 +359,11 @@
    "cell_type": "code",
    "execution_count": 53,
    "id": "e5bbdf2f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -356,7 +396,11 @@
    "cell_type": "code",
    "execution_count": 73,
    "id": "635e8a79",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -487,7 +531,11 @@
    "cell_type": "code",
    "execution_count": 74,
    "id": "e01d4822",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, shuffle=True, train_size=0.3)"
@@ -497,7 +545,11 @@
    "cell_type": "code",
    "execution_count": 75,
    "id": "a8ab4ad9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class Multiple_Linear_Regression():   \n",
@@ -539,7 +591,11 @@
    "cell_type": "code",
    "execution_count": 76,
    "id": "0256be7e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "model = Multiple_Linear_Regression()"
@@ -549,7 +605,11 @@
    "cell_type": "code",
    "execution_count": 77,
    "id": "5459bed6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "model.fit(X_train, y_train)"
@@ -559,7 +619,11 @@
    "cell_type": "code",
    "execution_count": 78,
    "id": "cfd6fa9c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "y_preds = model.predict(X_test)"
@@ -569,7 +633,11 @@
    "cell_type": "code",
    "execution_count": 79,
    "id": "69f06fba",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -591,7 +659,11 @@
    "cell_type": "code",
    "execution_count": 80,
    "id": "d48e3388",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def mse(y_preds, y):\n",
@@ -642,7 +714,11 @@
    "cell_type": "code",
    "execution_count": 81,
    "id": "2a67c7f5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -663,7 +739,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "082fbc57",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -671,14 +751,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "30af8341",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "10eee679",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Proximal Gradient Descent"
    ]
@@ -687,7 +775,11 @@
    "cell_type": "code",
    "execution_count": 82,
    "id": "b5c6d2e7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def fmin_cgprox(f, f_prime, g_prox, x0, rtol=1e-6,\n",
@@ -773,7 +865,11 @@
    "cell_type": "code",
    "execution_count": 91,
    "id": "4f3c021e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def logloss(x):\n",
@@ -791,19 +887,23 @@
    "cell_type": "code",
    "execution_count": 94,
    "id": "77b98e66",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "AttributeError",
      "evalue": "module 'sklearn.linear_model' has no attribute '_logistic_loss'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [94]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m opt \u001b[38;5;241m=\u001b[39m \u001b[43mfmin_cgprox\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlogloss\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfprime_logloss\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mg_prox\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrtol\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1e-12\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m opt\n",
-      "Input \u001b[1;32mIn [82]\u001b[0m, in \u001b[0;36mfmin_cgprox\u001b[1;34m(f, f_prime, g_prox, x0, rtol, maxiter, verbose, default_step_size)\u001b[0m\n\u001b[0;32m     35\u001b[0m xk \u001b[38;5;241m=\u001b[39m x0\n\u001b[0;32m     36\u001b[0m fk_old \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39minf\n\u001b[1;32m---> 38\u001b[0m fk, grad_fk \u001b[38;5;241m=\u001b[39m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mxk\u001b[49m\u001b[43m)\u001b[49m, f_prime(xk)\n\u001b[0;32m     39\u001b[0m success \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m it \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(maxiter):\n\u001b[0;32m     41\u001b[0m     \u001b[38;5;66;03m# .. step 1 ..\u001b[39;00m\n\u001b[0;32m     42\u001b[0m     \u001b[38;5;66;03m# Find suitable step size\u001b[39;00m\n",
-      "Input \u001b[1;32mIn [91]\u001b[0m, in \u001b[0;36mlogloss\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlogloss\u001b[39m(x):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mlogistic\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_logistic_loss\u001b[49m(x, X, y, \u001b[38;5;241m1.\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'sklearn.linear_model' has no attribute '_logistic_loss'"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [94]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m opt \u001B[38;5;241m=\u001B[39m \u001B[43mfmin_cgprox\u001B[49m\u001B[43m(\u001B[49m\u001B[43mlogloss\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfprime_logloss\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mg_prox\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mzeros\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m4\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43mrtol\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m1e-12\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      2\u001B[0m opt\n",
+      "Input \u001B[1;32mIn [82]\u001B[0m, in \u001B[0;36mfmin_cgprox\u001B[1;34m(f, f_prime, g_prox, x0, rtol, maxiter, verbose, default_step_size)\u001B[0m\n\u001B[0;32m     35\u001B[0m xk \u001B[38;5;241m=\u001B[39m x0\n\u001B[0;32m     36\u001B[0m fk_old \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39minf\n\u001B[1;32m---> 38\u001B[0m fk, grad_fk \u001B[38;5;241m=\u001B[39m \u001B[43mf\u001B[49m\u001B[43m(\u001B[49m\u001B[43mxk\u001B[49m\u001B[43m)\u001B[49m, f_prime(xk)\n\u001B[0;32m     39\u001B[0m success \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mFalse\u001B[39;00m\n\u001B[0;32m     40\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m it \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(maxiter):\n\u001B[0;32m     41\u001B[0m     \u001B[38;5;66;03m# .. step 1 ..\u001B[39;00m\n\u001B[0;32m     42\u001B[0m     \u001B[38;5;66;03m# Find suitable step size\u001B[39;00m\n",
+      "Input \u001B[1;32mIn [91]\u001B[0m, in \u001B[0;36mlogloss\u001B[1;34m(x)\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mlogloss\u001B[39m(x):\n\u001B[1;32m----> 2\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mlogistic\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_logistic_loss\u001B[49m(x, X, y, \u001B[38;5;241m1.\u001B[39m)\n",
+      "\u001B[1;31mAttributeError\u001B[0m: module 'sklearn.linear_model' has no attribute '_logistic_loss'"
      ]
     }
    ],
@@ -816,7 +916,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a8a7c9c8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -824,7 +928,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3bdbe0bb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
